2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* gxx01/gxx_wrappers.h, gxx02/.cvsignore, gxx02/Makefile.am,
	gxx02/gxx02.doc, gxx02/gxx02.scn, gxx02/init.c: Removed files.
	* Makefile.am, configure.ac: Reflect changes above.
	* gxx01/init.c: Removed fatal error test case.

2010-08-10	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1661/testing
	* termios01/init.c, termios01/termios01.scn: Added a test case to
	hit a case in rtems_termios_read.

2010-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1664/testing
	* termios01/init.c: Use INT_MAX instead of hard-coded number for error
	case to avoid warning on 16-bit targets.

2010-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1661/testing
	* malloc04/init.c: Add public methods to get/set malloc heap pointer so
	the tests do not have to peer behind the API.

2010-08-09	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1661/testing
	* termios01/init.c, termios01/termios_testdriver.c,
	termios01/termios01.scn: Changes to improve coverage of
	rtems_termios_open routine.

2010-08-06	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1654/testing
	* deviceio01/init.c, deviceio01/deviceio01.doc,
	deviceio01/deviceio01.scn, deviceio01/test_driver.c,
	deviceio01/test_driver.h, deviceio01/Makefile.am: New test added.
	* Makefile.am, configure.ac: Changes to added above test.
	* tar02/init.c, tar02/tar02.scn: New test case added: IMFS_dump().

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for rtems_print_buffer().
	* dumpbuf01/.cvsignore, dumpbuf01/Makefile.am, dumpbuf01/dumpbuf01.doc,
	dumpbuf01/dumpbuf01.scn, dumpbuf01/init.c: New files.

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspcmdline01/bspcmdline01.scn, bspcmdline01/init.c: Add test cases to
	improve coverage.

2010-07-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Apply clean-local to remove
	intital_fs directory.
